# stop

./: .gitignore  README.md  config.go  data.go  ecosystem.config.cjs  go.mod  go.sum  history.go  lyrics.go  lyrics_integration_test.go  lyrics_providers.go  lyrics_test.go  main.go  match_probe_test.go  nvim.go  pyproject.toml  romanize.go  serve.go  snapshot.go  snapshot_api.go  translate.go  tui.go  view.go
src/stop/: main.py
